<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="app.devmedia.com.br.appdevmedia.MainActivity">


        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            style="@style/Edt_Padrao"
            android:layout_height="wrap_content"
            android:hint="@string/txtName"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            style="@style/Edt_Padrao"
            android:layout_height="wrap_content"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtBio"
            android:layout_width="match_parent"
            style="@style/Edt_Padrao"
            android:layout_height="wrap_content"
            android:hint="@string/txtBio" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            style="@style/Txt_Padrao"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtSexo0" />

        <RadioGroup
            android:id="@+id/rbgSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtFeminino"
                android:layout_width="wrap_content"
                style="@style/Txt_Padrao"
                android:layout_height="wrap_content"
                android:text="@string/rbtFeminino" />

            <RadioButton
                android:id="@+id/rbtMasculino"
                android:layout_width="wrap_content"
                style="@style/Txt_Padrao"
                android:layout_height="wrap_content"
                android:text="@string/rbtMasculino" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Txt_Padrao"
            android:layout_gravity="center"
            android:text="Profissao" />

        <Spinner
            android:id="@+id/spnProfissao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCadastrar"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
